@@ -78,8 +78,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
 
     @Test
     public void testPackagesFile() throws Exception {
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(
-                new File(getPath("InputPackageNamesLoaderFile.xml")).toURI().toURL()));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(new File(getPath("InputPackageNamesLoaderFile.xml")).toURI().toURL()));
 
         final Set<String> actualPackageNames = PackageNamesLoader
                 .getPackageNames(new TestUrlsClassLoader(enumeration));
@@ -116,8 +115,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
 
     @Test
     public void testPackagesWithDots() throws Exception {
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(
-                new File(getPath("InputPackageNamesLoaderWithDots.xml")).toURI().toURL()));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(new File(getPath("InputPackageNamesLoaderWithDots.xml")).toURI().toURL()));
 
         final Set<String> actualPackageNames = PackageNamesLoader
                 .getPackageNames(new TestUrlsClassLoader(enumeration));
@@ -137,8 +135,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
 
     @Test
     public void testPackagesWithDotsEx() throws Exception {
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(
-                new File(getPath("InputPackageNamesLoaderWithDotsEx.xml")).toURI().toURL()));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(new File(getPath("InputPackageNamesLoaderWithDotsEx.xml")).toURI().toURL()));
 
         final Set<String> actualPackageNames = PackageNamesLoader
                 .getPackageNames(new TestUrlsClassLoader(enumeration));
@@ -159,8 +156,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
 
     @Test
     public void testPackagesWithSaxException() throws Exception {
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(
-                new File(getPath("InputPackageNamesLoaderNotXml.java")).toURI().toURL()));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(new File(getPath("InputPackageNamesLoaderNotXml.java")).toURI().toURL()));
 
         try {
             PackageNamesLoader.getPackageNames(new TestUrlsClassLoader(enumeration));
@@ -194,7 +190,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
             }
         });
 
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(url));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(url));
 
         try {
             PackageNamesLoader.getPackageNames(new TestUrlsClassLoader(enumeration));
@@ -244,8 +240,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
 
     @Test
     public void testMapping() throws Exception {
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(
-                new File(getPath("InputPackageNamesLoader1.xml")).toURI().toURL()));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(new File(getPath("InputPackageNamesLoader1.xml")).toURI().toURL()));
 
         final Set<String> actualPackageNames = PackageNamesLoader
                 .getPackageNames(new TestUrlsClassLoader(enumeration));
@@ -257,8 +252,7 @@ public class PackageNamesLoaderTest extends AbstractPathTestSupport {
 
     @Test
     public void testMapping2() throws Exception {
-        final Enumeration<URL> enumeration = Collections.enumeration(Collections.singleton(
-                new File(getPath("InputPackageNamesLoader2.xml")).toURI().toURL()));
+        final Enumeration<URL> enumeration = Collections.enumeration(Set.of(new File(getPath("InputPackageNamesLoader2.xml")).toURI().toURL()));
 
         final Set<String> actualPackageNames = PackageNamesLoader
                 .getPackageNames(new TestUrlsClassLoader(enumeration));
