@@ -30,7 +30,7 @@ import java.io.Writer;
 import java.lang.reflect.Field;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.SortedSet;
 import java.util.TreeSet;
@@ -188,9 +188,9 @@ public class TranslationCheckTest extends AbstractXmlTestSupport {
         final String secondErrorMessage = getCheckMessage(MSG_KEY, "anotherKey");
 
         verify(checker, propertyFiles, ImmutableMap.of(
-            ":1", Collections.singletonList(" " + firstErrorMessage),
+            ":1", List.of(" " + firstErrorMessage),
             "InputTranslationCheckFireErrors_de.properties",
-                Collections.singletonList(line + secondErrorMessage)));
+                List.of(line + secondErrorMessage)));
 
         verifyXml(getPath("ExpectedTranslationLog.xml"), out,
             TranslationCheckTest::isFilenamesEqual,
